Fix desktop and mobile navigation

--- a/_espace-silencieux/moment-2025-08-09.md
+++ b/_espace-silencieux/moment-2025-08-09.md
@@ -3,7 +3,7 @@ layout: single
 title: "🤫 مساحة صامتة"
 date: 2025-08-09
 description: "ركن للتعبير الصادق بلا أحكام، حيث نكتب ونشارك في هدوء."
-catigorie: espace-silencieux
+categories: espace-silencieux
 classes: cahier-readers
 comments: true
 ---
